realtime/realtime-kubernetes.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: fabricrealtime
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: mirthdb
        - name: MYSQL_PASSWORD_FILE
          value: /run/secrets/MySQLPassword
        - name: MYSQL_ROOT_PASSWORD_FILE
          value: /run/secrets/MySQLRootPassword
        - name: MYSQL_USER
          value: mirthuser
        image: healthcatalyst/fabric.realtime.mysql
        name: mysqlserver
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysqlserver-claim0
      restartPolicy: Always
      volumes:
      - name: mysqlserver-claim0
        persistentVolumeClaim:
          claimName: mysqlserver-claim0
status: {}
