realtime/realtime-kubernetes-public.yml
# ----- Services exposed to the outside world ------
# solr web server
kind: Service
apiVersion: v1
metadata:
  name: certificateserverpublic
  namespace: fabricrealtime
spec:
  selector:
    app: certificateserver
  ports:
  - port: 80
    targetPort: 8081
---
